--- a/readit/server/static/index.html
+++ b/readit/server/static/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>ReadIt</title>
   <link rel="stylesheet" href="/css/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Audiowide" rel="stylesheet">
 </head>
 <body>
  
