--- a/readit/server/static/index.html
+++ b/readit/server/static/index.html
@@ -5,6 +5,7 @@
   <title>ReadIt</title>
   <link rel="stylesheet" href="/css/style.css">
   <link href="https://fonts.googleapis.com/css?family=Audiowide" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
 </head>
 <body>
  
@@ -12,6 +13,7 @@
   
   
   <script src="/js/app.js"></script>
+
   <h1 style="text-align: center">ReadIt</h1>
 </body>
 </html>
